<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/step1"
        android:textColor="#fff" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync_requests_note"
        android:textSize="10dip" />

    <Button
        android:id="@+id/select_photo_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:padding="10dp"
        android:text="@string/select_photo"
        android:textColor="#000"
        android:visibility="visible" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:text="@string/step2"
        android:textColor="#fff" />

    <Button
        android:id="@+id/show_in_browser_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:onClick="showall"
        android:padding="10dp"
        android:text="Show all images"
        android:textColor="#000"
        android:visibility="visible" />

</LinearLayout>