<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bharathmg.carpooling.PreRideVehicleOwner1">


    <AutoCompleteTextView
        android:id="@+id/vehicle_source"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/str_vehicle_source"
        android:singleLine="true" />

    <AutoCompleteTextView
        android:id="@+id/vehicle_destination"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/str_vehicle_dest"
        android:layout_marginTop="40dp"
        android:layout_below="@id/vehicle_source"
        android:singleLine="true"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/vehicle_destination"
        android:layout_below="@+id/vehicle_destination"
        android:layout_marginTop="12dp"
        android:background="#fff"
        android:onClick="scheduleNowStageTwo"
        android:padding="10dp"
        android:paddingBottom="15dp"
        android:paddingTop="5dp"
        android:text="@string/ScheduleNowRide"
        android:textColor="#000" />

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_below="@id/button1" />



</RelativeLayout>
