<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".Home"
    android:background="@android:color/holo_blue_dark" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:text="@string/welcome"
        android:textColor="#fff"
        android:textSize="25sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passengerFrom"
        android:textColor="#fff"
        android:textSize="15sp"
        android:layout_below="@id/textView1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="35dp"
        android:typeface="monospace" />

    <AutoCompleteTextView
        android:id="@+id/passenger_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="95dp"
        android:textColorHint="#fff"
        android:hint="Type your source location"
        android:textSize="15sp"
       />
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/passenger_location"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="305dp"/>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passengerTo"
        android:textColor="#fff"
        android:textSize="15sp"
        android:layout_below="@id/textView2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="35dp"
        android:typeface="monospace" />

    <AutoCompleteTextView
        android:id="@+id/passenger_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="95dp"
        android:layout_below="@id/passenger_source"
        android:textColorHint="#fff"
        android:hint="Type your destination"
        android:textSize="15sp"
        />
    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/passenger_location"
        android:layout_below="@id/imageButton1"
        android:layout_marginLeft="305dp"/>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passengerDepartDate"
        android:textColor="#fff"
        android:textSize="15sp"
        android:layout_below="@id/textView3"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="35dp"
        android:typeface="monospace" />


    <DatePicker
        android:id="@+id/departDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passenger_destination"
        android:layout_below="@+id/passenger_destination"
        android:layout_marginTop="25dp"
        android:calendarViewShown="false"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:layout_marginLeft="25dp">

    </DatePicker>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passengerDeparttime"
        android:textColor="#fff"
        android:textSize="15sp"
        android:layout_below="@id/departDatePicker"
        android:layout_alignLeft="@id/textView4"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="55dp"
        android:typeface="monospace" />

    <TimePicker
        android:id="@+id/departtimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView5"
        android:layout_below="@+id/departDatePicker"
        android:layout_marginTop="25dp"
        android:scaleY="0.5"
        android:calendarViewShown="false"
        android:layout_marginLeft="25dp"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/departtimePicker"
        android:layout_below="@+id/departtimePicker"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="-32dp"

        android:background="#fff"
        android:onClick="SubmitPassengerrequest"
        android:padding="5dp"
        android:text="@string/submitPassengerRequest"
        android:textColor="#000" />
</RelativeLayout>
