<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    tools:context=".Home"
    android:background="@android:color/holo_blue_dark" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:text="@string/welcome"
        android:textColor="#fff"
        android:textSize="15sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/pooling"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="60dp"
        android:background="#ffffff"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="drivepage"
        android:padding="15dp"
        android:text="@string/drive"
        android:textColor="#000" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="21dp"
        android:background="#ffffff"
        android:onClick="passenger"
        android:padding="15dp"
        android:text="@string/passenger"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="22dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#fff" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="17dp"
        android:background="#ffffff"
        android:onClick="logout"
        android:padding="15dp"
        android:text="Logout"
        android:textColor="#000"
        android:visibility="invisible"
         />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>