<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout xmlns="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".Home"
    android:background="@android:color/holo_blue_dark" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:text="@string/welcome"
        android:textColor="#fff"
        android:textSize="25sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passengerFrom"
        android:textColor="#fff"
        android:textSize="15sp"
        android:layout_below="@id/textView1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="35dp"
        android:typeface="monospace" />

    <AutoCompleteTextView
        android:id="@+id/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="95dp"
        android:textColorHint="#fff"
        android:hint="Type your source location"
        android:textSize="15sp"
        />
    <ImageButton
        android:id="@+id/imageButtonSourceOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/passenger_location"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="305dp"/>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passengerTo"
        android:textColor="#fff"
        android:textSize="15sp"
        android:layout_below="@id/textView2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="35dp"
        android:typeface="monospace" />

    <AutoCompleteTextView
        android:id="@+id/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="95dp"
        android:layout_below="@id/source"
        android:textColorHint="#fff"
        android:hint="Type your destination"
        android:textSize="15sp"
        />
    <ImageButton
        android:id="@+id/imageButtonDestOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/passenger_location"
        android:layout_below="@id/imageButtonSourceOwner"
        android:layout_marginLeft="305dp"/>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passengerDepartDate"
        android:textColor="#fff"
        android:textSize="15sp"
        android:layout_below="@id/textView3"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="35dp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/showMapforOwner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="-40dp"
        android:background="#fff"
        android:padding="5dp"
        android:text="@string/submitPassengerRequest"
        android:textColor="#000" />
    <DatePicker
        android:id="@+id/departDatePickerOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/destination"
        android:layout_below="@+id/destination"
        android:layout_marginTop="25dp"
        android:calendarViewShown="false"
        >

    </DatePicker>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passengerDeparttime"
        android:textColor="#fff"
        android:textSize="15sp"
        android:layout_below="@id/departDatePickerOwner"
        android:layout_alignLeft="@id/textView4"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="55dp"
        android:typeface="monospace" />

    <TimePicker
        android:id="@+id/departtimePickerOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView5"
        android:layout_below="@+id/departDatePickerOwner"
        android:layout_marginTop="25dp"
        android:calendarViewShown="false"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:id="@+id/seatsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="No of Seats"
        android:textColor="#fff"
        android:textSize="15sp"
        android:layout_below="@id/departtimePickerOwner"
        android:layout_alignLeft="@id/textView4"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="33dp"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/seatsOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/seatsLabel"
        android:layout_below="@+id/departtimePickerOwner"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Seats"
        android:padding="10dp"
        android:layout_marginLeft="55dp"
        android:textColor="#fff"
        android:textColorHint="#fff" />


</RelativeLayout>
</ScrollView>